runway/dummy_development.cfn/templates/vpc-security-setup.yaml
Parameters:
  VpcStackName: 
      Description: Name of a deployed stack contains needed Vpc resources.
      Type: String
      MinLength : '1'
      MaxLength : '255'
      AllowedPattern : ^[a-zA-Z][-a-zA-Z0-9]*$
  
Resources:
  # Jenkins Master SG
  JenkinsMasterSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Chef Workstations SG
      VpcId: !ImportValue 
        'Fn::Sub': ${VpcStackName}-VPCID
  JenkinsMasterSecurityGroupOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt JenkinsMasterSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      CidrIp: '0.0.0.0/0'
  JenkinsMasterSecurityGroupInboundPublicSshRule:
   Type: 'AWS::EC2::SecurityGroupIngress'
   Properties:
      GroupId: !GetAtt JenkinsMasterSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  JenkinsMasterSecurityGroupInboundPublicHttpRule:
   Type: 'AWS::EC2::SecurityGroupIngress'
   Properties:
      GroupId: !GetAtt JenkinsMasterSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      CidrIp: '0.0.0.0/0'

Outputs:
  VPCID:
    Value: !ImportValue 
      'Fn::Sub': ${VpcStackName}-VPCID
  PublicASubnetId:
    Value: !ImportValue 
      'Fn::Sub': ${VpcStackName}-PublicASubnetId
  PublicBSubnetId:
    Value: !ImportValue 
      'Fn::Sub': ${VpcStackName}-PublicBSubnetId
  
  JenkinsMasterSecurityGroupId:
    Value: !GetAtt JenkinsMasterSecurityGroup.GroupId
